--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>Beauty Salon</title>
+    <title>Document</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;900&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -90,14 +90,14 @@
 
                 <div id="services" class="services">
                     <div class="container container-without-left-margin mx-auto my-auto">
-                        <div class="row">
-                            <img class="col-md-6" src="./img/picturs/services.jpg" alt="">
+                        <div class="row flex_column">
+                            <img class="col-md-6 w100" src="./img/picturs/services.jpg" alt="">
                             <!-- <div class="col-md-6 be-static">
                                 <div class="services__pictur">
 
                                 </div>
                             </div> -->
-                            <div class="col-md-5">
+                            <div class="col-md-5 w100">
                                 <h2 class="services__title">
                                     Услуги
                                 </h2>
