--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>Document</title>
+    <title>Beauty Salon</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;900&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -346,7 +346,7 @@
                                                 <h3 class="testi-author-surname">Фамилия</h3>
                                             </div>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 w30">
                                             <p>Наш салон встречает своих посетителей современным дизайном и атмосферой уюта: небольшое светлое пространство, лучшая мебель. Это отличное место для того, чтобы посвятить паруацйацй часов только себе.</p>
                                         </div>
                                     </div>
@@ -370,7 +370,7 @@
                                         <h3 class="testi-author-surname">Фамилия</h3>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 w30">
                                     <p>Наш салон встречает своих посетителей современным дизайном и атмосферой уюта: небольшое светлое пространство, лучшая мебель. Это отличное место для того, чтобы посвятить паруацйацй часов только себе.</p>
                                 </div>
                             </div>
@@ -390,7 +390,7 @@
                                     <h3 class="testi-author-surname">Фамилия</h3>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 w30">
                                 <p>Наш салон встречает своих посетителей современным дизайном и атмосферой уюта: небольшое светлое пространство, лучшая мебель. Это отличное место для того, чтобы посвятить паруацйацй часов только себе.</p>
                             </div>
                         </div>
