--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                             <img src="img/logo.svg" class="navbar-brand">
                         </div>
                         
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent" 
-                        aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navContent">
