--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navContent">
-                            <ul class="navbar-nav col-md-7">
+                            <ul class="navbar-nav col-md-7 none">
                                 <li class="nav-item">
                                     <a class="nav-link" href="#about">О&nbsp;салоне</a>
                                 </li>
