--- a/index.html
+++ b/index.html
@@ -429,8 +429,10 @@
                         <p class="modalwindow-heading heading-margin-bottom">Выбор услуги</p>
                         <div class="modalwindow-step">Шаг 1 из 3</div>
                     </div>
-                    <input type="text" placeholder="Поиск по услугам" class="form-control" id="myInput" type="text">
-                    <img src="img/icons/Group 10.svg" alt="search" class="search-icon">
+                    <div class="search-input">
+                        <img src="img/icons/Group 10.svg" alt="search" class="search-icon">
+                        <input type="text" placeholder="Поиск по услугам" class="form-control" id="myInput" type="text">
+                    </div>
                     <ul class="list-group" id="myList">
                         <li class="list-group-item">
                             Маникюр
@@ -555,6 +557,7 @@
                     </div>
                     <button class="modal-btn-end">Назад</button>
                     <button class="modal-btn-next">Далее</button>
+                    <button class="modal-btn-send">Отправить</button>
                     <button class="closemodal"></button>
                 </div>
             </div>
