--- a/index.html
+++ b/index.html
@@ -435,37 +435,48 @@
                     </div>
                     <ul class="list-group" id="myList">
                         <li class="list-group-item">
-                            Маникюр
+                            <div class="item-name">Маникюр</div>
+                            <div class="item-price">200 руб.</div>
+                        </li>
+                        <li class="list-group-item" data-item>
+                            <div class="item-name">Педикюр</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Педикюр
+                            <div class="item-name">Шугаринг</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Шугаринг
+                            <div class="item-name">Наращивание ресниц</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Наращивание ресниц
+                            <div class="item-name">Перманент</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Перманент
+                            <div class="item-name">Стрижки</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Стрижки
+                            <div class="item-name">Массаж</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Массаж
+                            <div class="item-name">Брови / Ресницы</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Брови / Ресницы
+                            <div class="item-name">Макияж</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Макияж
+                            <div class="item-name">Причёски / Уход / Окрашивание волос</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                         <li class="list-group-item">
-                            Причёски / Уход / Окрашивание волос
-                        </li>
-                        <li class="list-group-item">
-                            Лазер SkinOne X
+                            <div class="item-name">Лазер SkinOne X</div>
+                            <div class="item-price">200 руб.</div>
                         </li>
                     </ul>
                     <button class="modal-btn-end">Назад</button>
